<resources>
    <string name="app_name">Recycle and Card view</string>
    <string name="Addstudent">Add Student</string>
    <string name="dummydata">dummydata</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="rollno">RollNo:</string>
    <string name="add_student">Add student</string>
    <string name="department">Department</string>
    <string name="add_photo">add photo</string>
    <string name="todo">TODO</string>
    <string name="roll_number">roll number</string>
</resources>