<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStudentFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="188dp"
            app:cardCornerRadius="500dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/add_studet_IV_pfp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:contentDescription="@string/todo" />
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/add_studnet_pt_name"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="68dp"
            android:ems="10"
            android:hint="name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/add_studnet_pt_deparment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            android:autofillHints="" />

        <TextView
            android:id="@+id/add_studnet_tv_name"
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/name"
            app:layout_constraintEnd_toStartOf="@+id/add_studnet_pt_name"
            app:layout_constraintTop_toTopOf="@+id/add_studnet_pt_name" />

        <EditText
            android:id="@+id/add_studnet_pt_deparment"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="department"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="@+id/add_studnet_pt_name"
            app:layout_constraintStart_toStartOf="@+id/add_studnet_pt_name"
            app:layout_constraintTop_toBottomOf="@+id/add_studnet_pt_name"
            android:autofillHints="" />

        <TextView
            android:id="@+id/add_studnet_tv_deparment"
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/department"
            app:layout_constraintEnd_toStartOf="@+id/add_studnet_pt_deparment"
            app:layout_constraintTop_toTopOf="@+id/add_studnet_pt_deparment" />

        <EditText
            android:id="@+id/add_studnet_pt_rollno"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="280dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/roll_number"
            android:inputType="textPersonName"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/add_studnet_pt_deparment"
            app:layout_constraintStart_toStartOf="@+id/add_studnet_pt_deparment"
            app:layout_constraintTop_toBottomOf="@+id/add_studnet_pt_deparment"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/add_studnet_tv_rollno"
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/rollno"
            app:layout_constraintEnd_toStartOf="@+id/add_studnet_pt_rollno"
            app:layout_constraintTop_toTopOf="@+id/add_studnet_pt_rollno" />

        <Button
            android:id="@+id/add_studnet_bt_add_student"
            android:layout_width="237dp"
            android:layout_height="46dp"
            android:text="@string/add_student"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/add_studnet_bt_add_phote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_studnet_pt_rollno" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>